--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,21 @@
 <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="push">
-        <mat-toolbar primary="color">
-            menu
-        </mat-toolbar>
-        <mat-nav-list>
-            <a mat-list-item routerLink="/home" >Home</a>
-            <a mat-list-item routerLink="/about" >About</a>
-            <a mat-list-item routerLink="/contact" >Contact</a>
-        </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-        <app-toolbar (toogleSidenav)="sidenav.toggle()"></app-toolbar>
-        <app-search (onSearch)="onSearch($event)"></app-search>
-        <ng-container *ngFor="let article of articles$ | async">
-<app-articles [article]="article"></app-articles>
-        </ng-container>
-    </mat-sidenav-content>
+  <mat-sidenav #sidenav mode="push">
+    <mat-toolbar primary="color"> menu </mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/home">Home</a>
+      <a mat-list-item routerLink="/about">About</a>
+      <a mat-list-item routerLink="/contact">Contact</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-toolbar (toogleSidenav)="sidenav.toggle()"></app-toolbar>
+    <router-outlet></router-outlet>
+    <!--<app-search (onSearch)="onSearch($event)"></app-search>
+    <ng-container *ngFor="let article of articles$ | async">
+      <app-articles [article]="article"></app-articles>
+    </ng-container>-->
+    
+    <app-footer></app-footer>
+  </mat-sidenav-content>
 </mat-sidenav-container>
-<router-outlet></router-outlet>
+
