--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   <mat-sidenav #sidenav mode="push">
     <mat-toolbar primary="color"> menu </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/home">Home</a>
-      <a mat-list-item routerLink="/about">About</a>
-      <a mat-list-item routerLink="/contact">Contact</a>
+      <a mat-list-item routerLink="home">Home</a>
+      <a mat-list-item routerLink="product">Product</a>
+      <a mat-list-item routerLink="contact">Contact</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
