--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <button mat-icon-button (click)="onToggleSidenav()">
+    <button mat-icon-button *ngIf="isLogged | async" (click)="onToggleSidenav()">
         <mat-icon>menu</mat-icon>
     </button>
     <span class="example-spacer"></span>
